# zoo

./: .gitignore  CMakeLists.txt  README.md  osgCmd.sln  zoo.sln
CMakeModules/: Find3rdPartyDependencies.cmake
applications/: CMakeLists.txt
applications/osgCmdShell/: main.cpp  osgCmdShell.vcxproj
applications/osgCmdUI/: SetupDlg.cpp  SetupDlg.h  SetupDlg.ui  main.cpp  osgCmdUI.cpp  osgCmdUI.h  osgCmdUI.qrc  osgCmdUI.ui  osgCmdUI.vcxproj  osgCmdUI.vcxproj.filters  osgCmdWidget.cpp  osgCmdWidget.h
applications/zooCmdShell/: CMakeLists.txt  main.cpp  zooCmdShell.vcxproj
applications/zooCmdUI/: CMakeLists.txt  ZooCmdUI.rc  main.cpp  resource.h  zooCmdUI.vcxproj
data/: cktpluginfw_props.ini  config.ini  world.earth
data/tables/: allyarmy.csv  scene.csv  staticobj.csv  weapon.csv
data/war_scene/: bluearmy.csv  dof.xml  effect.csv  redarmy.csv  scene.csv
dependency/SharedObject/: DoF.cpp  DoF.h  SharedObject.cpp  SharedObject.h  SharedObject.vcxproj  SharedObject.vcxproj.filters
dependency/zooCmdLoader/: ZooCmdLoader.cpp  ZooCmdLoader.h  zooCmdLoader.vcxproj  zooCmdLoader.vcxproj.filters
include/: UniversalGlobalServices.h
include/component/: WarComponents.h
include/ctk_service/: PluginfwAdminInterface.h  UIManagerService.h  WarService.h  Win32Service.h
include/zooCmd_osg/: OsgComponentImpls.h  OsgDevice.h  OsgEarthContext.h  OsgEarthSupport.h  OsgEarthUtils.h  OsgManipulatorMgr.h  OsgMaterial.h  OsgMesh.h
libs/: CMakeLists.txt
libs/luaScript/: CMakeLists.txt  LuaScriptStack.cpp  LuaScriptStack.h
libs/osgQt/: CMakeLists.txt  GraphicsWindowQt.cpp  GraphicsWindowQt.h
libs/toluaInput/: CMakeLists.txt  Input.cpp  Input.h  ToLuaInput.pkg
libs/toluaMath/: CMakeLists.txt  Math.pkg  MathWrapper.h  Matrixd.pkg  Matrixf.pkg  Quat.pkg  ToLuaMath.pkg  Vec2d.pkg  Vec2f.pkg  Vec3d.pkg  Vec3f.pkg  Vec4d.pkg  Vec4f.pkg
libs/zoo/: Block.h  CMakeLists.txt  Common.h  Component.cpp  Component.h  DatabaseCSV.cpp  DatabaseCSV.h  Log.cpp  Log.h  Reflection.cpp  ServiceLocator.cpp  ServiceLocator.h  Singleton.cpp  Support.h  UserData.h  Utils.cpp  Utils.h
libs/zooCmd/: CMakeLists.txt  Cmd.h  CmdParser.cpp  RenderAdapter.h  ZooCmd.cpp  ZooCmd.h
libs/zooCmdLoader/: CMakeLists.txt  ZooCmdLoader.cpp  ZooCmdLoader.h
plugins/: CMakeLists.txt
plugins/ctk_pluginfwadmin/: CMakeLists.txt  PluginFrameworkAdmin.cpp  PluginFrameworkAdmin.h
plugins/ctk_war/: Battlefield.cpp  Battlefield.h  CMakeLists.txt  InstanceReleaser.h  LuaExportClass.cpp  LuaExportClass.h  LuaScript.cpp  LuaScript.h  ToLuaWar.pkg  WarActivator.cpp  WarActivator.h  WarCommander.cpp  WarCommander.h  WarComponents.cpp  WarComponents.h  WarServiceImpl.cpp  WarServiceImpl.h  WarSimulator.cpp  WarSimulator.h  manifest_headers.cmake
plugins/ctk_war_ui/: ArmyListWgt.cpp  ArmyListWgt.h  ArmyListWgt.ui  BehaviorPropertyWgt.ui  CMakeLists.txt  CameraPropertyWgt.ui  ComListWgt.ui  ComPropertyBoard.cpp  ComPropertyBoard.h  ComPropertyBoard.ui  ConfigTableWgt.ui  DoFPropertyWgt.ui  EarthPropertyWgt.ui  EnvirPropertyWgt.ui  MaterialDisplayWgt.cpp  MaterialDisplayWgt.h  MaterialEditBoard.cpp  MaterialEditBoard.h  MaterialEditBoard.ui  MaterialWgt.ui  MenuToolButtons.cpp  MenuToolButtons.h  MeshWgt.ui  ModelPropertyWgt.ui  OpenBattlefieldDlg.cpp  OpenBattlefieldDlg.h  OpenBattlefieldDlg.ui  PropertyWgts.cpp  PropertyWgts.h  ShaderWgt.ui  TextureWgt.ui  UIActivator.cpp  UIActivator.h  ctk_war_ui.qrc  manifest_headers.cmake
plugins/zooCmd_osg/: BuiltinCmd.cpp  BuiltinCmd.h  BuiltinEventHandler.cpp  BuiltinEventHandler.h  BuiltinMaterial.cpp  BuiltinMaterial.h  BuiltinMesh.cpp  BuiltinMesh.h  CMakeLists.txt  CameraManipulatorManager.cpp  CameraManipulatorManager.h  CameraManipulatorMgr.cpp  CameraManipulatorMgr.h  FogEffect.cpp  FogEffect.h  InputDevice.cpp  InputDevice.h  MaterialManager.cpp  MaterialManager.h  MaterialScript.cpp  MaterialScript.h  MaterialScript.l  MaterialScript.y  MeshManager.cpp  MeshManager.h  NebulaNode.cpp  NebulaNode.h  OsgComponentImpls.cpp  OsgComponentImpls.h  OsgEarthContextImpl.cpp  OsgEarthContextImpl.h  OsgEarthUtilsImpl.cpp  OsgEarthUtilsImpl.h  PublicFunctions.cpp  PublicFunctions.h  RenderDevice.cpp  RenderDevice.h  SkyBox.cpp  SkyBox.h  StarrySky.cpp  (+5 more)
plugins/zooCmd_osg-earth/: CMakeLists.txt  EarthCmd.cpp  EarthCmd.h  EarthControls.cpp  EarthControls.h  LocateModelHandler.h  LonLatDistHandler.cpp  LonLatDistHandler.h  MeasureDistHandler.cpp  MeasureDistHandler.h
plugins/zooCmd_osg-world/: CMakeLists.txt  LocateModelEventHandler.cpp  LocateModelEventHandler.h  LocateModelHandler.cpp  LocateModelHandler.h  LongitudeLatitudeEventHandler.cpp  LongitudeLatitudeEventHandler.h  LongitudeLatitudeHandler.cpp  LongitudeLatitudeHandler.h  MeasureDistanceEventHandler.cpp  MeasureDistanceEventHandler.h  MeasureDistanceHandler.cpp  MeasureDistanceHandler.h  WorldCmd.cpp  WorldCmd.h  WorldControls.cpp  WorldControls.h  zooCmd_osg-world.vcxproj  zooCmd_osg-world.vcxproj.filters
resource/: world.earth
src/: CMakeLists.txt  osgCmd.h  osgCmd.vcxproj  osgCmd.vcxproj.filters
src/zoo/: Any.h  BitState.h  Block.h  CMakeLists.txt  Common.h  Component.cpp  Component.h  DatabaseCSV.cpp  DatabaseCSV.h  DoF.cpp  DoF.h  DynLib.cpp  DynLib.h  DynLibManager.cpp  DynLibManager.h  Interlock.h  Log.cpp  Log.h  Math.h  Reflection.cpp  Reflection.h  Sigslot.cpp  Sigslot.h  Singleton.h  Support.h  Timer.h  UserData.cpp  UserData.h  Utils.cpp  Utils.h  zoo.vcxproj  zoo.vcxproj.filters
src/zooCmd/: AppUsage.cpp  AppUsage.h  BuiltinCmd.cpp  BuiltinCmd.h  CMakeLists.txt  Cmd.h  CmdManager.cpp  CmdManager.h  CmdParser.cpp  CmdParser.h  CmdUsage.cpp  CmdUsage.h  InputAdapter.cpp  InputAdapter.h  RenderAdapter.h  Support.h  ZooCmd.cpp  ZooCmd.h  zooCmd.cpp  zooCmd.h  zooCmd.vcxproj  zooCmd.vcxproj.filters
src/zooCmdLoader/: CMakeLists.txt  ZooCmdLoader.cpp  ZooCmdLoader.h
src/zooCmd_osg/: CMakeLists.txt  InputDevice.cpp  InputDevice.h  SharedComponentImpls.cpp  SharedComponentImpls.h  Support.h  zooCmd_osg.vcxproj  zooCmd_osg.vcxproj.filters
tools/: copy_zoo2zoo-demo.py  osgCmd-file-copy.bat  zoo-file-copy.bat
(+197 files in other folders)
