set_property(GLOBAL PROPERTY USE_FOLDERS ON)
SUBDIRLIST(SRC_DIR_LIST ${CMAKE_CURRENT_SOURCE_DIR})
FOREACH(src_dir ${SRC_DIR_LIST})
	IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${src_dir}/CMakeLists.txt")
		add_subdirectory(${src_dir})
		IF(TARGET ${src_dir})
			SET_PROPERTY(TARGET ${src_dir} PROPERTY FOLDER "libs")	
		ENDIF(TARGET ${src_dir})
	ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${src_dir}/CMakeLists.txt")
ENDFOREACH()
